Fix issue with gallery blurred background and sort components in folders

--- a/components/Gallerie/PictureGrid.module.css
+++ b/components/Gallerie/PictureGrid.module.css
@@ -14,9 +14,10 @@
 
 .blur {
   height: 100vh;
+  min-height: 100%;
   width: 100vw;
 
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
